# segfault_academy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/segfault/: vector.hpp
src/: vector.cpp
tests/: CMakeLists.txt  test_vector.cpp
